--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "ruff>=0.12.12",
 ]
 
 [project.urls]
