--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "ruff>=0.12.12",
+    "uvicorn[standard]>=0.35.0",
 ]
 
 [project.urls]
