--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
   - name: usdc-arc-remote-mcp-demo
     buildpacks:
-      - python
+        - python_buildpack
     command: uvicorn usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4 --reload
     health-check-type: http
     health-check-http-endpoint: /mcp/health
