--- a/manifest.yml
+++ b/manifest.yml
@@ -2,12 +2,11 @@ applications:
   - name: usdc-arc-remote-mcp-demo
     buildpacks:
         - python_buildpack
-    command: uvicorn src.usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4 --reload
+    command: uvicorn src.usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4
     health-check-type: http
     health-check-http-endpoint: /mcp/health
     env:
       PYTHONUNBUFFERED: 1
-      PYTHONPATH: src
     random-route: true
     disk_quota: 512M
     memory: 256M
