change health endpoint

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ applications:
         - python_buildpack
     command: uvicorn src.usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4
     health-check-type: http
-    health-check-http-endpoint: /mcp/health
+    health-check-http-endpoint: /health
     env:
       PYTHONUNBUFFERED: 1
     random-route: true
