--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,7 @@ applications:
     health-check-http-endpoint: /health
     env:
       PYTHONUNBUFFERED: 1
+      PYTHONPATH: "src"
     random-route: true
     disk_quota: 512M
     memory: 256M
