--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
   - name: usdc-arc-remote-mcp-demo
     buildpacks:
         - python_buildpack
-    command: uvicorn src.usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4
+    command: uvicorn usdc_arc_mcp_demo.app:app --host 0.0.0.0 --port $PORT --workers 4
     health-check-type: http
     health-check-http-endpoint: /health
     env:
